tools/intellij/src/main/gen/org/acornlang/language/parser/AcornParser.java
// This is a generated file. Not intended for manual editing.
package org.acornlang.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.acornlang.language.psi.AcornTypes.*;
import static org.acornlang.language.parser.AcornParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AcornParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(BREAK_STMT, CONTINUE_STMT, RETURN_STMT, STMT,
      VAR_DECL_STMT),
    create_token_set_(CONST_DECL, CONTAINER_ITEM, NAMED_ENUM_DECL, NAMED_FN_DECL,
      NAMED_SPEC_DECL, NAMED_STRUCT_DECL, NAMED_UNION_DECL),
    create_token_set_(ARRAY_EXPR, ASSIGN_EXPR, BINARY_EXPR, BLOCK,
      CALL_EXPR, CONSTRUCT_EXPR, EXPR, HEADLESS_SELECT_EXPR,
      IF_EXPR, INDEX_EXPR, INTRINSIC_REF_EXPR, LITERAL_EXPR,
      NEGATE_UNARY_EXPR, NOT_UNARY_EXPR, PAREN_EXPR, REF_UNARY_EXPR,
      SELECT_EXPR, STRUCT_DECL_EXPR, TYPE_UNION_EXPR, VAR_REF_EXPR,
      WHILE_EXPR),
  };

  /* ********************************************************** */
  // PLUS | MINUS
  public static boolean AddBinOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AddBinOp")) return false;
    if (!nextTokenIs(b, "<add bin op>", MINUS, PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<add bin op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BREAK
  public static boolean BreakStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BreakStmt")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    exit_section_(b, m, BREAK_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // (ExtendedExpr (COMMA (ExtendedExpr | &RBRACE))*)?
  static boolean CallArgList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgList")) return false;
    CallArgList_0(b, l + 1);
    return true;
  }

  // ExtendedExpr (COMMA (ExtendedExpr | &RBRACE))*
  private static boolean CallArgList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgList_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = ExtendedExpr(b, l + 1);
    p = r; // pin = 1
    r = r && CallArgList_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMA (ExtendedExpr | &RBRACE))*
  private static boolean CallArgList_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgList_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CallArgList_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CallArgList_0_1", c)) break;
    }
    return true;
  }

  // COMMA (ExtendedExpr | &RBRACE)
  private static boolean CallArgList_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgList_0_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && CallArgList_0_1_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ExtendedExpr | &RBRACE
  private static boolean CallArgList_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgList_0_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ExtendedExpr(b, l + 1);
    if (!r) r = CallArgList_0_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &RBRACE
  private static boolean CallArgList_0_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallArgList_0_1_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // EQEQ | BANGEQ | LT | LTEQ | GT | GTEQ
  public static boolean CmpBinOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CmpBinOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<cmp bin op>");
    r = consumeToken(b, EQEQ);
    if (!r) r = consumeToken(b, BANGEQ);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LTEQ);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GTEQ);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // CONST IDENT (COLON LimitedExpr)? EQ Expr SEMI
  public static boolean ConstDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstDecl")) return false;
    if (!nextTokenIs(b, CONST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONST_DECL, null);
    r = consumeTokens(b, 1, CONST, IDENT);
    p = r; // pin = 1
    r = r && report_error_(b, ConstDecl_2(b, l + 1));
    r = p && report_error_(b, consumeToken(b, EQ)) && r;
    r = p && report_error_(b, Expr(b, l + 1, -1)) && r;
    r = p && consumeToken(b, SEMI) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COLON LimitedExpr)?
  private static boolean ConstDecl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstDecl_2")) return false;
    ConstDecl_2_0(b, l + 1);
    return true;
  }

  // COLON LimitedExpr
  private static boolean ConstDecl_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstDecl_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && LimitedExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENT COLON ExtendedExpr
  public static boolean ConstructArg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArg")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCT_ARG, null);
    r = consumeTokens(b, 1, IDENT, COLON);
    p = r; // pin = 1
    r = r && ExtendedExpr(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // (ConstructArg (COMMA (ConstructArg | &RBRACE))*)?
  static boolean ConstructArgList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArgList")) return false;
    ConstructArgList_0(b, l + 1);
    return true;
  }

  // ConstructArg (COMMA (ConstructArg | &RBRACE))*
  private static boolean ConstructArgList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArgList_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = ConstructArg(b, l + 1);
    p = r; // pin = 1
    r = r && ConstructArgList_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMA (ConstructArg | &RBRACE))*
  private static boolean ConstructArgList_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArgList_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ConstructArgList_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ConstructArgList_0_1", c)) break;
    }
    return true;
  }

  // COMMA (ConstructArg | &RBRACE)
  private static boolean ConstructArgList_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArgList_0_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && ConstructArgList_0_1_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ConstructArg | &RBRACE
  private static boolean ConstructArgList_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArgList_0_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ConstructArg(b, l + 1);
    if (!r) r = ConstructArgList_0_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &RBRACE
  private static boolean ConstructArgList_0_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstructArgList_0_1_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ConstDecl
  //                 | NamedFnDecl
  //                 | NamedEnumDecl
  //                 | NamedStructDecl
  //                 | NamedUnionDecl
  //                 | NamedSpecDecl
  public static boolean ContainerItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerItem")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, CONTAINER_ITEM, "<container item>");
    r = ConstDecl(b, l + 1);
    if (!r) r = NamedFnDecl(b, l + 1);
    if (!r) r = NamedEnumDecl(b, l + 1);
    if (!r) r = NamedStructDecl(b, l + 1);
    if (!r) r = NamedUnionDecl(b, l + 1);
    if (!r) r = NamedSpecDecl(b, l + 1);
    exit_section_(b, l, m, r, false, AcornParser::ContainerItem_recover);
    return r;
  }

  /* ********************************************************** */
  // !(CONST | FN | ENUM | STRUCT | UNION | SPEC)
  static boolean ContainerItem_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerItem_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !ContainerItem_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // CONST | FN | ENUM | STRUCT | UNION | SPEC
  private static boolean ContainerItem_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContainerItem_recover_0")) return false;
    boolean r;
    r = consumeToken(b, CONST);
    if (!r) r = consumeToken(b, FN);
    if (!r) r = consumeToken(b, ENUM);
    if (!r) r = consumeToken(b, STRUCT);
    if (!r) r = consumeToken(b, UNION);
    if (!r) r = consumeToken(b, SPEC);
    return r;
  }

  /* ********************************************************** */
  // CONTINUE
  public static boolean ContinueStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStmt")) return false;
    if (!nextTokenIs(b, CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTINUE);
    exit_section_(b, m, CONTINUE_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE EnumCaseList? RBRACE
  static boolean EnumBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && EnumBody_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // EnumCaseList?
  private static boolean EnumBody_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_1")) return false;
    EnumCaseList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENT
  public static boolean EnumCase(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumCase")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENT);
    exit_section_(b, m, ENUM_CASE, r);
    return r;
  }

  /* ********************************************************** */
  // EnumCase (COMMA (EnumCase | &RBRACE))*
  public static boolean EnumCaseList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumCaseList")) return false;
    if (!nextTokenIs(b, IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EnumCase(b, l + 1);
    r = r && EnumCaseList_1(b, l + 1);
    exit_section_(b, m, ENUM_CASE_LIST, r);
    return r;
  }

  // (COMMA (EnumCase | &RBRACE))*
  private static boolean EnumCaseList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumCaseList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!EnumCaseList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumCaseList_1", c)) break;
    }
    return true;
  }

  // COMMA (EnumCase | &RBRACE)
  private static boolean EnumCaseList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumCaseList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && EnumCaseList_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // EnumCase | &RBRACE
  private static boolean EnumCaseList_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumCaseList_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EnumCase(b, l + 1);
    if (!r) r = EnumCaseList_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &RBRACE
  private static boolean EnumCaseList_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumCaseList_1_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // !(SEMI | RBRACE)
  static boolean Expr_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expr_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !Expr_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // SEMI | RBRACE
  private static boolean Expr_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expr_recover_0")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, RBRACE);
    return r;
  }

  /* ********************************************************** */
  // <<setExprMode 'ExprMode.EXTENDED' Expr>>
  static boolean ExtendedExpr(PsiBuilder b, int l) {
    return setExprMode(b, l + 1, ExprMode.EXTENDED, Expr_parser_);
  }

  /* ********************************************************** */
  // ContainerItem* <<eof>>
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = File_0(b, l + 1);
    r = r && eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ContainerItem*
  private static boolean File_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ContainerItem(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File_0", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENT (COLON LimitedExpr)?
  public static boolean FnParam(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParam")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FN_PARAM, "<fn param>");
    r = consumeToken(b, IDENT);
    p = r; // pin = 1
    r = r && FnParam_1(b, l + 1);
    exit_section_(b, l, m, r, p, AcornParser::FnParam_recover);
    return r || p;
  }

  // (COLON LimitedExpr)?
  private static boolean FnParam_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParam_1")) return false;
    FnParam_1_0(b, l + 1);
    return true;
  }

  // COLON LimitedExpr
  private static boolean FnParam_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParam_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && LimitedExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN (FnParam (COMMA (FnParam | &RPAREN))*)? RPAREN
  public static boolean FnParamList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FN_PARAM_LIST, null);
    r = consumeToken(b, LPAREN);
    p = r; // pin = 1
    r = r && report_error_(b, FnParamList_1(b, l + 1));
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (FnParam (COMMA (FnParam | &RPAREN))*)?
  private static boolean FnParamList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList_1")) return false;
    FnParamList_1_0(b, l + 1);
    return true;
  }

  // FnParam (COMMA (FnParam | &RPAREN))*
  private static boolean FnParamList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = FnParam(b, l + 1);
    p = r; // pin = 1
    r = r && FnParamList_1_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMA (FnParam | &RPAREN))*
  private static boolean FnParamList_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FnParamList_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FnParamList_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA (FnParam | &RPAREN)
  private static boolean FnParamList_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList_1_0_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && FnParamList_1_0_1_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // FnParam | &RPAREN
  private static boolean FnParamList_1_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList_1_0_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FnParam(b, l + 1);
    if (!r) r = FnParamList_1_0_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &RPAREN
  private static boolean FnParamList_1_0_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParamList_1_0_1_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // !(COMMA | RPAREN)
  static boolean FnParam_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParam_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !FnParam_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // COMMA | RPAREN
  private static boolean FnParam_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnParam_recover_0")) return false;
    boolean r;
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, RPAREN);
    return r;
  }

  /* ********************************************************** */
  // FnParamList LimitedExpr
  static boolean FnProto(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FnProto")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FnParamList(b, l + 1);
    r = r && LimitedExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<setExprMode 'ExprMode.LIMITED' Expr>>
  static boolean LimitedExpr(PsiBuilder b, int l) {
    return setExprMode(b, l + 1, ExprMode.LIMITED, Expr_parser_);
  }

  /* ********************************************************** */
  // AMPAMP | BARBAR
  public static boolean LogBinOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LogBinOp")) return false;
    if (!nextTokenIs(b, "<log bin op>", AMPAMP, BARBAR)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<log bin op>");
    r = consumeToken(b, AMPAMP);
    if (!r) r = consumeToken(b, BARBAR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
